syntax="proto3";

option go_package="./GrpcBlogService";

message CreatePostRequest{
    int32 AuthorId=1;
    string Title=2;
    string Content=3;
}

message CreatePostResponse{
    int32 ErrorCode=1;
    int32 PostId=2;
}

message GetPostRequest{
    int32 PostId=1;
}

message GetPostResponse{
    int32 ErrorCode=1;
    string Title=2;
    string Content=3;
    int32 AuthorId=4;
    int64 timeCreate=5;
}

service BlogService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost(GetPostRequest) returns (GetPostResponse);
}



